syntax = "proto3";
package users;

service Contacts {
    rpc CreateContacts (CreateContactsRequest) returns (CreateContactsResponse);
}

message Contact {
    string contact_uuid = 1;
    string channel_uuid = 2;
    string message_date = 3;
    string message_uuid = 4;
}

message CreateContactsRequest {
    repeated Contact contacts = 1;
}

message CreateContactsResponse {
    
}